# Quantitative-Trading-Pipeline

./: .gitignore  README.md  pyproject.toml
outputs/: synthetic-demo_backtest.csv
src/ai_powered_quant_trading.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/quant_trading/: __init__.py  backtest.py  cli.py  data.py  features.py  graph.py  model.py  monte_carlo.py
