[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powered-quant-trading"
version = "0.1.0"
description = "An AI-powered quantitative trading system using XGBoost, backtesting, and Monte Carlo robustness checks."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "yfinance>=0.2",
]

[project.scripts]
quant-trading = "quant_trading.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
